deploy/k8s-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen-api
  labels:
    app: zen-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zen-api
  template:
    metadata:
      labels:
        app: zen-api
    spec:
      containers:
        - name: zen-api
          image: zenacr.azurecr.io/api:latest
          resources:
            requests:
              cpu: "100m"
              memory: "400Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          ports:
            - containerPort: 7080
              name: zen-api-port
            - containerPort: 7081
              name: zen-api-socketio-port
---
apiVersion: v1
kind: Service
metadata:
  name: zen-api-svc
spec:
  selector:
    app: zen-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: zen-api-port
    - name: socketio
      protocol: TCP
      port: 81
      targetPort: zen-api-socketio-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zen-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://portal.site.ca"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.site.ca
      secretName: tls-secret
  rules:
    - host: api.site.ca
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: zen-api-svc
                port:
                  number: 81 # Socket.IO
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zen-api-svc
                port:
                  number: 80
